--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Magnetic lock plugin for homebridge: https://github.com/nfarina/homebridge",
   "license": "ISC",
   "keywords": [
-    "homebridge-plugin"
+    "homebridge-plugin",
+    "magnetic-lock"
   ],
   "repository": {
     "type": "git",
@@ -14,8 +15,8 @@
     "url": "http://github.com/johnschult/homebridge-magnetic-lock/issues"
   },
   "engines": {
-    "node": ">=0.12.0",
-    "homebridge": ">=0.2.0"
+    "node": ">=5.0",
+    "homebridge": ">=0.4.9"
   },
   "dependencies": {
   }
